# crashes-2018

./: .gitignore  Build.hs  Config.hs  README.md  Rules.hs  config.yaml  crashes.cabal  stack.yaml  template.cabal
data/: average-rainfall.csv  crash+yearly.csv  daily_trend.csv  hourly+allxmas.csv  hourly+allxmas.json  hourly+xmas.csv  load-nzta-data.sql  nym_yearly.csv  preprocess.R  rainfall.sql  xmas_periods.csv
explore/: christmas-holidays.Rmd  christmas-holidays.nb.html  initial-ideas.Rmd
interactive/: elm.json  package-lock.json  package.json  webpack.analyse.js  webpack.build.js  webpack.common.js  webpack.deploy.js  webpack.dev.js  webpack.prod.js  webpack.release.js
interactive/src/: BarChart.elm  DataTypes.elm  Main.elm  article.json  base.less  crash+nym_yearly.json  crash+xmas_periods.json  daily_trend.json  hourly+xmas.json  index.html  loading.html  loading.js  loading.less  nym_yearly.json  root.html  root.js  root.less
interactive/src/App/: BarChart.elm  DataTypes.elm  LineChart.elm  Msg.elm  XmasGrid.elm
interactive/static/: index.html  play.json
interactive/static-dev/: embeded.html  full-site.html  iframed.html
interactive/static-dev/full_site/: 07979635ef.js  133eed50fe.css  34aad63ee4.js  481ace5eec.js  487ada8cb5.js  8bc35eec0e.css  92b005a7f4.js  a190f49585.js  barfoot_NNZH(1).html  cc_af.js  (+20 more)
interactive/util/: embed.js  uploader.js
preparation/: ChangeLog.md  README.md  package.yaml  preparation.cabal
preparation/app/: Main.hs
preparation/src/: Lib.hs  Scrolly.hs  TypeTH.hs  Types.hs
static/: iframe-fix.js
text/: article.md
(+4 files in other folders)
